@@ -45,6 +45,7 @@
       <li><a href="NuttShell.html" target="main">NuttShell (NSH)</a></li>
       <li><a href="NuttXNxFlat.html" target="main">NXFLAT</a></li>
       <li><a href="NXGraphicsSubsystem.html" target="main">NX Graphics</a></li>
+      <li><a href="NuttXDemandPaging.html" target="main">Demand Paging</a></li>
       <li><a href="README.html" target="main">README Files</a></li>
       <li><a href="ChangeLog.txt" target="main">Change Log</a></li>
       <li><a href="TODO.txt" target="main">To-Do List</a></li>
